remark and proposal overflow fixed

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -903,6 +903,11 @@ body {
     overflow: auto !important;
 }
 
+.db-overflow-y {
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+}
+
 .db-conf-att {
     background-color: white;
 
